--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,32 @@
-# spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-# spring.datasource.username=postgres
-# spring.datasource.password=admin
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
+# ??????? ??????????????? ????? (????? ??????????? ???????? ????????)
+# spring.main.allow-bean-definition-overriding=false
+
+# ???????? ????? ???????? ????????
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ????????? ??????????? ? ??
+# spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+# spring.datasource.username=postgres
+# spring.datasource.password=yourpassword
+# spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ????????? ??? ??????????? ??????????? SQL
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+
+# H2 Database
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=true
+spring.h2.console.settings.web-allow-others=true
+
+# JPA
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
