--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@
 # spring.jpa.show-sql=true
 # spring.jpa.properties.hibernate.format_sql=true
 
+# server.port=8081
 # H2 Database
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
 spring.datasource.driver-class-name=org.h2.Driver
