Доработал настройку кода для теста

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,16 +1,15 @@
-# H2 Database
+# H2 Database (in-memory)
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 
-# H2 Console
+# H2 Console (optional)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=true
-spring.h2.console.settings.web-allow-others=true
 
-# JPA
+# JPA (test-specific settings)
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
