--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,33 +1,33 @@
-# spring.jpa.hibernate.ddl-auto=none
-# spring.jpa.properties.hibernate.format_sql=true
-# spring.sql.init.mode=never
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=never
 
-# logging.level.org.springframework.orm.jpa=INFO
-# logging.level.org.springframework.transaction=INFO
-# logging.level.org.springframework.transaction.interceptor=TRACE
-# logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+logging.level.org.springframework.orm.jpa=INFO
+logging.level.org.springframework.transaction=INFO
+logging.level.org.springframework.transaction.interceptor=TRACE
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-# spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-# spring.datasource.username=postgres
-# spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=admin
 
-# spring.jpa.database=postgresql
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # H2 Database (in-memory)
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+# spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+# spring.datasource.driver-class-name=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=password
 
 # H2 Console (optional)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
 
 # JPA (test-specific settings)
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-server.port=8080
+# spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
