Исправил api-tests.yml и удалил таймезон

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Moscow
+# spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Moscow
 
 # Initialization
 spring.sql.init.mode=never
 
 # Timezone
-spring.jackson.time-zone=Europe/Moscow
+# spring.jackson.time-zone=Europe/Moscow
 
 # Logging
 logging.level.org.springframework.orm.jpa=INFO
