--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -1,40 +1,8 @@
+name: ShareIt API Tests
+
+on:
+  pull_request:
+
 jobs:
   build:
-    runs-on: ubuntu-latest
-    
-    services:
-      postgres:
-        image: postgres:13
-        env:
-          POSTGRES_PASSWORD: admin
-          POSTGRES_DB: postgres
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-    
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-
-      - name: Run API tests with Newman
-        run: |
-          npm install -g newman
-          newman run ./tests/postman/sprint.json \
-            --delay-request 50 \
-            -r cli,htmlextra \
-            --verbose \
-            --color on \
-            --reporter-htmlextra-darkTheme \
-            --reporter-htmlextra-export reports/shareIt.html \
-            --reporter-htmlextra-title "Отчет по тестам" \
-            --reporter-htmlextra-logs true \
-            --reporter-htmlextra-template ./tests/.github/workflows/dashboard-template.hbs
+    uses: yandex-praktikum/java-shareit/.github/workflows/api-tests.yml@ci
