--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,19 @@
-# Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+# ???????? ????????? ??
+spring.datasource.url=jdbc:postgresql://localhost:5432/your_database_name
 spring.datasource.username=postgres
 spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=none
+# ????????? Hibernate
+spring.jpa.hibernate.ddl-auto=update 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-# spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Moscow
 
-# Initialization
-spring.sql.init.mode=never
-
-# Timezone
-# spring.jackson.time-zone=Europe/Moscow
-
-# Logging
-logging.level.org.springframework.orm.jpa=INFO
-logging.level.org.springframework.transaction=INFO
-logging.level.org.springframework.transaction.interceptor=TRACE
-logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
-logging.level.your.package.name=DEBUG
+# ???????? ????????? ???????????
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.jdbc.core=TRACE
 
 # H2 Database (in-memory)
 # spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
