--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ???????? ????????? ??
 spring.datasource.url=jdbc:postgresql://localhost:5432/your_database_name
 spring.datasource.username=postgres
-spring.datasource.password=admin
+cdspring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ????????? Hibernate
@@ -14,6 +14,21 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.jdbc.core=TRACE
+logging.level.ru.practicum.shareit=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.root=INFO
+logging.level.org.springframework.web.servlet.mvc.method.annotation.ExceptionHandlerExceptionResolver=DEBUG
+logging.level.org.springframework.web.filter=TRACE
+logging.level.org.springframework.boot.web.servlet.FilterRegistrationBean=DEBUG
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.hibernate=TRACE
+logging.level.ru.practicum=DEBUG
+logging.level.org.springframework.validation=TRACE
+
+server.error.include-stacktrace=always
+server.error.include-message=always
+server.tomcat.max-http-form-post-size=-1
+spring.servlet.multipart.max-request-size=10MB
 
 # H2 Database (in-memory)
 # spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
