Создал остальные классы в модуль gateway и добавил их базовые классы, тоже доработал конфигурации

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=9090
+spring.application.name=shareit-server
+
 # ???????? ????????? ??
 spring.datasource.url=jdbc:postgresql://localhost:5432/your_database_name
 spring.datasource.username=postgres
