--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,16 +2,16 @@ server.port=9090
 spring.application.name=shareit-server
 
 # ???????? ????????? ??
-spring.datasource.url=jdbc:postgresql://localhost:5432/your_database_name
-spring.datasource.username=postgres
-cdspring.datasource.password=admin
-spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.datasource.url=jdbc:postgresql://localhost:5432/your_database_name
+# spring.datasource.username=postgres
+# cdspring.datasource.password=admin
+# spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ????????? Hibernate
-spring.jpa.hibernate.ddl-auto=update 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # ???????? ????????? ???????????
 logging.level.org.hibernate.SQL=DEBUG
@@ -34,18 +34,21 @@ server.tomcat.max-http-form-post-size=-1
 spring.servlet.multipart.max-request-size=10MB
 
 # H2 Database (in-memory)
-# spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
-# spring.datasource.driver-class-name=org.h2.Driver
-# spring.datasource.username=sa
-# spring.datasource.password=password
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
 
 # H2 Console (optional)
-# spring.h2.console.enabled=true
-# spring.h2.console.path=/h2-console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # JPA (test-specific settings)
-# spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.format_sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# ????????? ??
+spring.datasource.driverClassName=org.h2.Driver
 
