--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -48,6 +48,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.open-in-view=false
+spring.jackson.serialization.fail-on-empty-beans=false
 
 # ????????? ??
 spring.datasource.driverClassName=org.h2.Driver
