--- a/server/src/test/resources/application-test.properties
+++ b/server/src/test/resources/application-test.properties
@@ -1,20 +1,7 @@
-# H2 Database (in-memory)
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
-
-# H2 Console (optional)
+spring.datasource.password=password
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# JPA (test-specific settings)
-spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
-
-logging.level.org.springframework=DEBUG
-logging.level.ru.practicum=DEBUG
+spring.jpa.hibernate.ddl-auto=create-drop
